--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "casperjs-practice",
   "version": "1.0.0",
-  "description": "",
-  "main": "googlelinks.js",
+  "main": "modules/main.js",
   "dependencies": {},
   "devDependencies": {
     "casperjs": "^1.1.2",
+    "eslint": "^3.0.1",
     "jquery": "^3.1.0",
     "phantomjs": "^2.1.7"
   },
   "scripts": {
-    "test": "casperjs test"
+    "lint": "eslint modules --fix",
+    "test": "casperjs test ./modules/main.js",
+    "casperjs": "casperjs"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/intoday87/casperjs-practice/issues"
   },
-  "homepage": "https://github.com/intoday87/casperjs-practice#readme"
+  "homepage": "https://github.com/intoday87/casperjs-practice#readme",
+  "description": ""
 }
